# advent-of-code-rust

./: .gitignore  Cargo.toml
.fleet/: run.json
src/: algorithm.rs  command_line.rs  input.rs  lib.rs  main.rs
src/year_2015/: day01.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs
src/year_2016/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  mod.rs
src/year_2023/: day_01.rs
src/year_2025/: day_01.rs
