[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.3.0", features = ["alloc"] }
frunk = "0.4.4"
hex-literal = "1.1.0"
indoc = "2.0.7"
md-5 = "0.10.6"
regex = "1.12.2"
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
